# VoicePhrase

./: CLAUDE.md  README.md  build.py  main.py  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  application.py  error_handler.py  notification_manager.py  replacements_editor.py  ui_components.py
data/: ophthalmology_phrases.txt  replacements.txt  technical_terms.txt
docs/: CHANGELOG.md
external_service/: google_stt_api.py
scripts/: json_minifier.py  project_structure.py  project_structure.txt  sample.py
service/: audio_recorder.py  clipboard_manager.py  keyboard_handler.py  paste_backend.py  recording_timer.py  text_transformer.py  transcription_handler.py
tests/app/: test_notification_manager.py  test_replacements_editor.py
tests/external_service/: test_google_stt_api.py
tests/service/: test_paste_backend.py  test_transcription_handler.py
tests/utils/: test_app_config.py
utils/: app_config.py  config.ini  env_loader.py
